
What's New in Python 2.3.3c1?
===================================

*Release date: XXX *

Extension modules
-----------------

- Patch #813445: Add missing socket.IPPROTO_IPV6.

- Bug #807314: Properly raise an exception if non-existent Tcl
  variable is accessed.

- Bug #811028: ncurses.h breakage on FreeBSD/MacOS X

- Bug #814613: INET_ADDRSTRLEN fix needed for all compilers on SGI

What's New in Python 2.3.2 (final)?
===================================

*Release date: 03-Oct-2003*

Core and builtins
-----------------

- A workaround for an OpenBSD compiler bug that meant python failed to
  detect floating point overflow in some cases.

Tools/Demos
-----------

- Tools/scripts/md5sum.py opens files in binary mode by default. Opening
  in text mode is almost certainly not what you want.

Extension modules
-----------------

- The documentation for bsddb now warns strongly about using the legacy
  API in multi-threaded applications.

What's New in Python 2.3.2c1?
=============================

*Release date: 30-Sep-2003*

Build
-----

- A bug in the autoconf machinery meant that os.fsync was never available.

- A bug in autoconf meant a bunch of symbols were undefined on HP/UX.

Mac
---

- The Framework build now identifies itself as 2.3.2.

What's New in Python 2.3.1?
===========================

*Release date: 23-Sep-2003*

Core and builtins
-----------------

- Patch #805613: Fix usage of the PTH library.

- Fixed a bug in the cache of length-one Unicode strings that could
  lead to a seg fault.  The specific problem occurred when an earlier,
  non-fatal error left an uninitialized Unicode object in the
  freelist.

- Fixed a leak in class objects defining a comparison but not a hash
  function.

- Bug #789402, fixed memory leak when opening a file object.

- Fixed a leak when new code objects are instantiated.

- Bug #800796: slice(1).__hash__() now raises a TypeError, unhashable type.

- Bug #603724: Pass an explicit buffer to setvbuf in PyFile_SetBufSize().
